# orocos_controllers

./: stack.xml
common_headers/: CMakeLists.txt  package.xml
controller_common/: CMakeLists.txt  package.xml
controller_common/include/controller_common/: cartesian_impedance.h  robot.h  vector_concate.h  vector_split.h
controller_common/src/: controller_common.cpp
ec_hw_model/: CMakeLists.txt  package.xml
ec_hw_model/src/: EcDriveModel.cpp  EcDriveModel.h  EcHwModel.cpp  EcHwModel.h
ec_manager/: CMakeLists.txt  package.xml
ec_manager/src/: ECManager.cpp  ECManager.h  string_colors.h
fake_imu/: CMakeLists.txt  package.xml
fake_imu/src/: FakeIMU.cpp  FakeIMU.h
fake_servo/: CMakeLists.txt  manifest.xml  package.xml
fake_servo/src/: FakeServo.cpp  FakeServo.h
force_control/: CMakeLists.txt  package.xml
force_control/src/: ForceControlLaw.cpp  ForceControlLaw.h  ForceTransformation.cpp  ForceTransformation.h  WrenchPublisher.cpp  WrenchPublisher.h
force_control_msgs/: CMakeLists.txt  package.xml
force_control_msgs/msg/: ForceControl.msg  ReciprocalDamping.msg  ToolGravityParam.msg
internal_space_spline_trajectory_action/: CMakeLists.txt  package.xml
internal_space_spline_trajectory_action/src/: InternalSpaceSplineTrajectoryAction.cpp  InternalSpaceSplineTrajectoryAction.h
internal_space_spline_trajectory_generator/: CMakeLists.txt  package.xml
internal_space_spline_trajectory_generator/src/: InternalSpaceSplineTrajectoryGenerator.cpp  InternalSpaceSplineTrajectoryGenerator.h  velocityprofile_spline.cpp  velocityprofile_spline.hpp
joint_spline_trajectory_generator/: CMakeLists.txt  manifest.xml  package.xml
joint_spline_trajectory_generator/src/: JointSplineTrajectoryGenerator.cpp  JointSplineTrajectoryGenerator.h  velocityprofile_spline.cpp  velocityprofile_spline.hpp
limit_detector/: CMakeLists.txt  package.xml
limit_detector/src/: LimitDetector.cpp  LimitDetector.h
oro_controllers_manager/: CMakeLists.txt  mainpage.dox  manifest.xml
oro_controllers_manager/action/: SwitchController.action
oro_controllers_manager/src/: controllers_manager.cpp  controllers_manager.h
oro_joint_state_publisher/: .tb_history  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
oro_joint_state_publisher/src/: JointStatePublisher.cpp  JointStatePublisher.hpp
oro_joint_trajectory_action/: CMakeLists.txt  manifest.xml  package.xml
oro_joint_trajectory_action/src/: JointTrajectoryAction.cpp  JointTrajectoryAction.h
oro_servo_msgs/: CMakeLists.txt  manifest.xml
oro_servo_msgs/include/: JointState.hpp  Setpoint.hpp
oro_servo_msgs/msg/: ServoState.msg  ServoStates.msg  Setpoint.msg  Setpoints.msg
port-split/: CMakeLists.txt  package.xml
port-split/src/: PortDoubleAggregate.cpp  PortDoubleAggregate.h  PortDoubleSplit.cpp  PortDoubleSplit.h  PortDoubleToFloat64.h
port_operations/: CMakeLists.txt  package.xml
port_operations/src/: IM2RM.cpp  IM2RM.h  PortDoubleAggregate.cpp  PortDoubleAggregate.h  PortDoubleSplit.cpp  PortDoubleSplit.h  PortDoubleSum.cpp  PortDoubleSum.h  PortDoubleToFloat64.cpp  PortDoubleToFloat64.h
rtt_force_control_msgs/: CMakeLists.txt  package.xml
rtt_pr2_controllers_msgs/: CMakeLists.txt  manifest.xml
rtt_ros_integration_pr2_controllers_msgs/: CMakeLists.txt  mainpage.dox  manifest.xml
