<package>
  <name>common_headers</name>
  <version>2.6.0</version>
  <description>common headers</description>
  <author email="tomrobotics@gmail.com">Tomasz Winiarski</author>
  <maintainer email="tomrobotics@gmail.com">Tomasz Winiarski</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
