<package>
  <name>oro_joint_state_publisher</name>
  <version>2.6.0</version>
  <description>This package contain orocos component, which will publish JoinState for you from within orocos controller.</description>
  <maintainer email="konradb3@gmail.com">Konrad Banachowicz</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/oro_joint_state_publisher</url>

  <author email="konradb3@gmail.com">Konrad Banachowicz</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>xeno_clock</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <rtt_plugin_depend>rtt_ros</rtt_plugin_depend>
  </export>
</package>
